Changed structure of the directory

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <link rel="stylesheet" href="style.css">
   <title>Bongiwe Ndleve</title>
 </head>
+
 <body>
   <header>
     <div class="initials-logo">
@@ -40,8 +41,8 @@
     <div class="about-container">
       <div class="about-text">
         <h1>Bongiwe Ndleve</h1>
-        <p class="subtitle">Aspiring Psychology Researcher | Mental Health Advocate</p>
-        <p>Bongiwe Ndleve is an aspiring psychology researcher and current undergraduate student. He is passionate about mental health, cognitive development, and how psychological research can help build more resilient communities.</p>
+        <p class="subtitle">Aspiring Clinical Psychologist | Mental Health Advocate</p>
+        <p>Bongiwe Ndleve is an aspiring clinical psychologist and current undergraduate student. He is passionate about mental health, cognitive development, and how psychological research can help build more resilient communities.</p>
       </div>
       <img src="images/ndleve.jpg" alt="Bongiwe Ndleve" class="about-img">
     </div>
@@ -55,28 +56,37 @@
       <button class="carousel-btn left" onclick="scrollCarousel(-1)">&#8592;</button>
       <div class="carousel" id="research-carousel">
 
-      <div class="card">
-        <img src="images/project1.png" alt="Project 1">
-        <h3>Crime & Society</h3>
-        <p>Oversaw a collaborative project by guiding individual contributions and synthesizing them into a cohesive final product. Took the lead in designing and organizing presentation slides to ensure clarity and impact. Engaged confidently with questions from peers and lecturers, enhancing the overall delivery. This experience strengthened a wide range of skills including leadership, problem solving, analytical thinking, teamwork, and effective communication—while also reinforcing a strong work ethic, attention to detail, and a mindset of continuous learning.</p>
-      </div>
-
         <div class="card">
           <img src="images/research1.png" alt="Research 1">
           <h3>Relationship Stress vs Academic Performance</h3>
           <p> This study investigates the correlation between stress levels and academic performance among undergraduate students. It explores how chronic stress, time pressure, and emotional fatigue impact cognitive functioning and exam outcomes. By analyzing survey data and academic records, the research aims to identify patterns and potential risk factors. The study also considers the role of support systems, such as peer networks and campus counseling services, in mitigating stress.</p>
+          <div class="read-more-container">
+            <a href="./data/research/Relationship Between Stress and Academic Performance Among Undergraduates.pdf" class="read-more-btn">Read More →</a>
+          </div>
         </div>
 
         <div class="card">
           <img src="images/research2.png" alt="Research 2">
           <h3>Post-Pandemic Coping Mechanisms for the Youth.</h3>
           <p>This research explores the coping strategies adopted by youth in the aftermath of the COVID-19 pandemic. It examines how young people navigate emotional distress, social isolation, and academic disruptions through mechanisms such as mindfulness, peer support, digital communities, and creative expression. The study draws on qualitative interviews and psychological assessments to identify patterns of resilience and vulnerability.</p>
+          <div class="read-more-container">
+            <a href="./data/research/POST PANDEMIC COPING MECHANISMS FOR THE YOUTH.pdf" class="read-more-btn">Read More →</a>
+          </div>
         </div>
 
         <div class="card">
           <img src="images/research3.png" alt="Research 3">
           <h3>Early Childhood Intervention & Psychological Resilience.</h3>
           <p>This study examines how early childhood interventions contribute to the development of psychological resilience later in life. It focuses on programs that support emotional regulation, secure attachment, and cognitive stimulation during formative years. By analyzing longitudinal data and case studies, the research highlights how timely support can buffer against future mental health challenges and enhance adaptive coping skills. The study also explores the role of caregivers, educators, and community resources in fostering resilience.</p>
+          <div class="read-more-container">
+            <a href="./data/research/Early Childhood Interventions and the Development of Psychological Resilience.pdf" class="read-more-btn">Read More →</a>
+          </div>
+        </div>
+
+        <div class="card">
+          <img src="images/project1.png" alt="Project 1">
+          <h3>Crime & Society</h3>
+          <p>Oversaw a collaborative project by guiding individual contributions and synthesizing them into a cohesive final product. Took the lead in designing and organizing presentation slides to ensure clarity and impact. Engaged confidently with questions from peers and lecturers, enhancing the overall delivery. This experience strengthened a wide range of skills including leadership, problem solving, analytical thinking, teamwork, and effective communication—while also reinforcing a strong work ethic, attention to detail, and a mindset of continuous learning.</p>
         </div>
 
         <div class="card">
