Added Correct Contact Details

--- a/index.html
+++ b/index.html
@@ -188,8 +188,8 @@
       <h2>Contact Me</h2>
       <div class="contact-container">
         <div class="contact-info">
-          <p><i class="fas fa-envelope"></i> bongiwe@example.com</p>
-          <p><i class="fas fa-phone"></i> +27 12 345 6789</p>
+          <p><i class="fas fa-envelope"></i> bndlevee@gmail.com</p>
+          <p><i class="fas fa-phone"></i> (+27) 062 440 8171</p>
         </div>
 
         <form id="contact-form" class="contact-form" action="https://formspree.io/f/xnnvekya" method="POST">
