--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
       <h2>Contact Me</h2>
       <div class="contact-container">
         <div class="contact-info">
-          <p><i class="fas fa-envelope"></i> bndlevee@gmail.com</p>
+          <p><i class="fas fa-envelope"></i> bndleve@gmail.com</p>
           <p><i class="fas fa-phone"></i> (+27) 062 440 8171</p>
         </div>
 
