--- a/admin/index.html
+++ b/admin/index.html
@@ -7,5 +7,12 @@
     <script src="https://unpkg.com/netlify-cms@^2.0.0/dist/netlify-cms.js"></script>
   </head>
   <body>
+    <script>
+      window.CMS_MANUAL_INIT = true;
+    </script>
+    <div id="nc-root"></div> <!-- REQUIRED -->
+    <script>
+      NetlifyCms.init(); // REQUIRED
+    </script>
   </body>
 </html>
