attempt1 @ fixing research bug

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet">
 
+  <script src="https://cdn.jsdelivr.net/npm/gray-matter@4.0.3/dist/gray-matter.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
+
   <link rel="stylesheet" href="style.css">
   <title>Bongiwe Ndleve</title>
 </head>
@@ -55,9 +58,8 @@
     <div class="carousel-container">
       <button class="carousel-btn left" onclick="scrollCarousel(-1)">&#8592;</button>
       <div class="carousel" id="research-carousel">
-
         <div id="research-container" class="research-grid"></div>
-
+      </div>
   </section>
 
   <section id="resume" class="resume-section" data-aos="fade-up" data-aos-delay="100">
@@ -174,7 +176,5 @@
     </script>
 
     <!-- gray-matter and marked.js (for parsing .md content) -->
-    <script src="https://cdn.jsdelivr.net/npm/gray-matter@4.0.3/dist/gray-matter.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
   </body>
 </html>
