--- a/index.html
+++ b/index.html
@@ -49,9 +49,7 @@
       </div>
       <img src="images/ndleve.jpg" alt="Bongiwe Ndleve" class="about-img">
     </div>
-</section>
-
-
+  </section>
 
   <section id="research" class="research-section" data-aos="fade-up" data-aos-delay="100">
     <h2>Projects & Research</h2>
@@ -60,6 +58,7 @@
       <div class="carousel" id="research-carousel">
         <div id="research-container" class="research-grid"></div>
       </div>
+    </div>
   </section>
 
   <section id="resume" class="resume-section" data-aos="fade-up" data-aos-delay="100">
