--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet">
 
-  <script src="https://cdn.jsdelivr.net/npm/gray-matter@4.0.3/dist/gray-matter.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/gray-matter@4.0.3/browser.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
 
   <link rel="stylesheet" href="style.css">
@@ -165,15 +165,23 @@
     <script src="script.js"></script>
 
     <!-- AOS JS -->
+    <!-- Load AOS script first -->
     <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
+
+    <!-- Then safely initialize it -->
     <script>
-      AOS.init({
-        duration: 1000,     // animation duration (ms)
-        once: true,         // whether animation should happen only once
-        easing: 'ease-out'  // easing option
-      });
+      document.addEventListener('DOMContentLoaded', () => {
+       if (typeof AOS !== 'undefined') {
+        AOS.init({
+          duration: 1000,
+          once: true,
+          easing: 'ease-out'
+        });
+     } else {
+       console.error('AOS is not defined. Make sure the script is loaded.');
+      }
+     });
     </script>
 
-    <!-- gray-matter and marked.js (for parsing .md content) -->
   </body>
 </html>
