--- a/admin/index.html
+++ b/admin/index.html
@@ -2,17 +2,12 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>Admin</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Content Manager</title>
     <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
-    <script src="https://unpkg.com/netlify-cms@^2.0.0/dist/netlify-cms.js"></script>
   </head>
   <body>
-    <script>
-      window.CMS_MANUAL_INIT = true;
-    </script>
-    <div id="nc-root"></div> <!-- REQUIRED -->
-    <script>
-      NetlifyCms.init(); // REQUIRED
-    </script>
+    <!-- Include the script that builds the page and powers Netlify CMS -->
+    <script src="https://unpkg.com/netlify-cms@^2.0.0/dist/netlify-cms.js"></script>
   </body>
 </html>
