--- a/index.html
+++ b/index.html
@@ -164,6 +164,18 @@
       <p>&copy; 2025 Bongiwe Ndleve | Developed by Lesley Ngcobo</p>
     </footer>
 
+    <script>
+      if (window.netlifyIdentity) {
+        window.netlifyIdentity.on("init", user => {
+          if (!user) {
+            window.netlifyIdentity.on("login", () => {
+              document.location.href = "/admin/";
+            });
+          }
+        });
+      }
+    </script>
+
     <script src="script.js"></script>
   </body>
 </html>
