attemp1 @ fixing admin page/login

--- a/index.html
+++ b/index.html
@@ -164,6 +164,7 @@
       <p>&copy; 2025 Bongiwe Ndleve | Developed by Lesley Ngcobo</p>
     </footer>
 
+    <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
     <script>
       if (window.netlifyIdentity) {
         window.netlifyIdentity.on("init", user => {
@@ -172,6 +173,15 @@
               document.location.href = "/admin/";
             });
           }
+        });
+    
+        // Handle password recovery redirects
+        window.netlifyIdentity.on("login", () => {
+          document.location.href = "/admin/";
+        });
+    
+        window.netlifyIdentity.on("logout", () => {
+          document.location.href = "/";
         });
       }
     </script>
