--- a/index.html
+++ b/index.html
@@ -2,20 +2,27 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <link rel="canonical" href="https://bongiwe.netlify.app/">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Bongiwe Ndleve - Aspiring Clinical Psychologist and Mental Health Advocate. Passionate about cognitive development, psychology research, and building resilient communities.">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-
   <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
 
   <script src="https://cdn.jsdelivr.net/npm/gray-matter@4.0.3/browser.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
 
+  <meta property="og:title" content="Bongiwe Ndleve">
+  <meta property="og:description" content="Aspiring Clinical Psychologist and Mental Health Advocate.">
+  <meta property="og:image" content="https://bongiwe.netlify.app/images/ndleve.jpg">
+  <meta property="og:url" content="https://bongiwe.netlify.app/">
+  <meta name="twitter:card" content="summary_large_image">
+
   <link rel="stylesheet" href="style.css">
-  <title>Bongiwe Ndleve</title>
+  <title>Bongiwe Ndleve | Potfolio</title>
 </head>
 
 <body>
