Added google verification

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <link rel="canonical" href="https://bongiwe.netlify.app/">
+  <meta name="google-site-verification" content="JdMaZPWGPYrRSi417ksPQ8KS4WCVLOxdy8WyY6XojS0" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Bongiwe Ndleve - Aspiring Clinical Psychologist and Mental Health Advocate. Passionate about cognitive development, psychology research, and building resilient communities.">
   <link rel="preconnect" href="https://fonts.googleapis.com">
