fix: added the right company in resume
- The right company is Bolt, not Uber

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
       <div class="resume-item">
         <h4>Driver</h4>
         <h5>February 2021 - August 2022</h5>
-        <p><em>Uber, Port Elizabeth, Eastern Cape</em></p>
+        <p><em>Bolt, Port Elizabeth, Eastern Cape</em></p>
         <ul>
           <li>Improved client satisfaction by actively listening and responding to diverse passenger needs.</li>
           <li>Maintained ride quality by calmly resolving disagreements and tensions.</li>
